--- a/EmployeeManagementSystem/pom.xml
+++ b/EmployeeManagementSystem/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>standard</artifactId>
 			<version>1.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.3.3</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 	</dependencies>
