--- a/EmployeeManagementSystem/src/main/webapp/WEB-INF/web.xml
+++ b/EmployeeManagementSystem/src/main/webapp/WEB-INF/web.xml
@@ -28,14 +28,17 @@
   	<description></description>
   	<servlet-class>com.globallogic.employeeController.UpdateEmployeeDetailsController</servlet-class>
   </servlet>
-
- 
- 
   <servlet>
-  	<servlet-name>EditEmployeeByTag</servlet-name>
-  	<display-name>EditEmployeeByTag</display-name>
+  	<servlet-name>DeleteEmployeeDirect</servlet-name>
+  	<display-name>DeleteEmployeeDirect</display-name>
   	<description></description>
-  	<servlet-class>com.globallogic.employeeController.EditEmployeeByTag</servlet-class>
+  	<servlet-class>com.globallogic.employeeController.DeleteEmployeeDirect</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>EditEmployeeDirect</servlet-name>
+  	<display-name>EditEmployeeDirect</display-name>
+  	<description></description>
+  	<servlet-class>com.globallogic.employeeController.EditEmployeeDirect</servlet-class>
   </servlet>
   
   <servlet-mapping>
@@ -54,12 +57,12 @@
   	<servlet-name>UpdateEmployeeDetailsController</servlet-name>
   	<url-pattern>/UpdateEmployeeDetailsController</url-pattern>
   </servlet-mapping>
- 
- 
-
-  
   <servlet-mapping>
-  	<servlet-name>EditEmployeeByTag</servlet-name>
-  	<url-pattern>/edit</url-pattern>
+  	<servlet-name>DeleteEmployeeDirect</servlet-name>
+  	<url-pattern>/Delete</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>EditEmployeeDirect</servlet-name>
+  	<url-pattern>/Edit</url-pattern>
   </servlet-mapping>
 </web-app>
